// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RegionWrapper stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  Child Content
</div>
`;

exports[`RegionWrapper stories snapshot > WithMultipleChildren story renders and matches snapshot 1`] = `
<div>
  Child 1
</div>
`;
